# money_transfer

./: .coverage  .coveragerc  .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  conftest.py  docker-compose.yml  manage.py  nginx.conf  pyproject.toml  uwsgi.ini
accounts/: admin.py  constants.py  forms.py  models.py  urls.py  validators.py  views.py
accounts/admin/: __init__.py  user.py
accounts/forms/: __init__.py  transfer_money.py
accounts/management/commands/: create_fake_users.py
accounts/migrations/: 0001_initial.py  0002_alter_user_account.py  0003_alter_user_tin.py  0004_rename_account_user_balance_alter_user_email.py
accounts/models/: __init__.py  user.py
accounts/templates/: base.html  transfer_money.html  transfer_money_success.html
accounts/tests/: fixtures.py  transfer_form_test.py
accounts/tests/forms/: transfer_money_form_test.py
accounts/tests/views/: transfer_money_test.py
accounts/views/: transfer_money.py
core/services/: transfer.py  transfer_money.py
core/tests/: transfer_service_test.py
money_transfer/: asgi.py  settings.py  urls.py  wsgi.py
scripts/: entrypoint.sh
